# agimus_franka_description

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  NOTICE  README.md  flake.nix  package.xml
.docker/: Dockerfile  create_urdf.entrypoint.sh  visualize_franka.entrypoint.sh
.github/workflows/: ci_ros2.yml  nix.yml  update-flake-lock.yml
end_effectors/agimus_franka_hand/: agimus_franka_hand.urdf.xacro  agimus_franka_hand_arguments.xacro
end_effectors/ati_mini45_no_camera/: ati_mini45_no_camera.urdf.xacro  ati_mini45_no_camera_arguments.xacro  inertials.yaml
end_effectors/ati_mini45_with_camera/: ati_mini45_with_camera.urdf.xacro  calibrated_params.yaml  inertials.yaml
end_effectors/ati_mini45_with_compact_camera/: ati_mini45_with_compact_camera.urdf.xacro  ati_mini45_with_compact_camera_arguments.xacro  inertials.yaml
end_effectors/cobot_pump/: cobot_pump.urdf.xacro  cobot_pump_arguments.xacro  inertials.yaml
end_effectors/common/: agimus_franka_hand.xacro  ee_with_one_link.xacro  utils.xacro
end_effectors/franka_hand/: calibrated_params.yaml  franka_hand_arguments.xacro
end_effectors/ft_sensors/: ati_mini45.ros2_control.urdf.xacro  ati_mini45.urdf.xacro  ati_mini45_arguments.xacro  inertials.yaml
launch/: visualize_agimus_franka.launch.py
robots/common/: agimus_franka_arm.ros2_control.xacro  agimus_franka_arm.xacro  agimus_franka_robot.xacro  franka_arm.ros2_control.xacro  franka_arm.xacro  franka_robot.xacro  (+1 more)
scripts/: create_urdf.py  create_urdf.sh  visualize_agimus_franka.sh  visualize_franka.sh
test/: urdf_tests.py
worlds/: empty.sdf
(+20 files in other folders)
